--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Carlos Coloma <ccescribano@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-loader": "^7.0.0",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
@@ -37,7 +39,7 @@
     "blacklist": "^1.1.4",
     "classnames": "^2.2.0",
     "lodash": "^4.17.4",
-    "react-input-slider": "^1.5.0"
+    "react-input-slider": "github:ccoloma/react-input-slider"
   },
   "repository": {
     "type": "git",
