--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,20 @@
 {
-  // Use IntelliSense to learn about possible Node.js debug attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Mocha tests",
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceRoot}/index.js",
+      "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "--compilers",
+        "js:babel-register",
+        "--no-timeouts",
+        "--require",
+        ".vscode/registerBabel.js",
+        "src/DateTimeInputTest.js"
+      ],
       "cwd": "${workspaceRoot}"
-    },
-    {
-      "type": "node",
-      "request": "attach",
-      "name": "Attach to Process",
-      "port": 5858
     }
   ]
 }
