--- a/package.json
+++ b/package.json
@@ -3,21 +3,17 @@
   "version": "0.0.1",
   "description": "React datetime picker powered by momentjs",
   "main": "index.js",
-  "scripts": {
-    "start": "npm-run-all --parallel dev watch:css",
-    "build:css": "node-sass --output-style compressed -o example/css src/scss/datetime.scss",
-    "watch:css": "onchange 'src/scss/*.scss' -- npm run build:css",
-    "dev": "webpack-dev-server --inline --hot --progress --colors",
-    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register --require .vscode/registerBabel.js test/*Test.js"
-  },
   "author": "Carlos Coloma <ccescribano@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-loader": "^7.0.0",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
+    "enzyme": "^2.9.1",
+    "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.4",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.2",
@@ -33,11 +29,7 @@
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
-    "blacklist": "^1.1.4",
-    "classnames": "^2.2.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.17.1",
-    "react-input-slider": "github:ccoloma/react-input-slider"
+    "moment": "^2.17.1"
   },
   "repository": {
     "type": "git",
@@ -54,5 +46,12 @@
   "bugs": {
     "url": "https://github.com/koliseoapi/react-moment-datetime/issues"
   },
-  "homepage": "https://github.com/koliseoapi/react-moment-datetime#readme"
+  "homepage": "https://github.com/koliseoapi/react-moment-datetime#readme",
+  "scripts": {
+    "start": "npm-run-all --parallel dev watch:css",
+    "build:css": "node-sass --output-style compressed -o example/css src/scss/datetime.scss",
+    "watch:css": "onchange 'src/scss/*.scss' -- npm run build:css",
+    "dev": "webpack-dev-server --inline --hot --progress --colors",
+    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register --require .vscode/registerBabel.js test/*Test.js"
+  }
 }
