--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
+    "coveralls": "^2.13.1",
     "enzyme": "^2.9.1",
     "jsdom": "^11.1.0",
     "jsdom-global": "^3.0.2",
@@ -19,6 +20,7 @@
     "mocha": "^3.4.2",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
+    "nyc": "^11.0.3",
     "onchange": "^3.2.1",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.1",
@@ -55,6 +57,7 @@
     "watch:css": "onchange 'src/scss/*.scss' -- npm run build:css",
     "dev": "webpack-dev-server --inline --hot --progress --colors",
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register --require .vscode/registerBabel.js test/*Test.js",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "coverage": "NODE_ENV=test node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/_mocha --compilers js:babel-register test/*Test.js"
   }
 }
