Fix error with Safari

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "scripts": {
     "watch": "npm-run-all --parallel watch:**",
     "build": "node-sass --output-style compressed -o example/css src/scss/datetime.scss",
-    "watch:css": "onchange 'src/scss/*.scss' -- npm run build:css",
+    "watch:css": "onchange 'src/scss/*.scss' -- npm run build",
     "watch:js": "webpack-dev-server --inline --hot --progress --colors",
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register --require .vscode/registerBabel.js test/*Test.js",
     "postversion": "git push && git push --tags",
