--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
-	"presets": ["es2015", "react"],
-  "plugins": [
-    "transform-object-rest-spread"
-  ]
+  "presets": ["@babel/env", "@babel/react"],
+  "plugins": ["@babel/plugin-proposal-object-rest-spread"],
+  "env": {
+    "test": {
+      "plugins": ["istanbul"]
+    }
+  }
 }
