--- a/package.json
+++ b/package.json
@@ -6,34 +6,32 @@
   "author": "Carlos Coloma <ccescribano@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-loader": "^7.0.0",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "coveralls": "^2.13.1",
-    "enzyme": "^2.9.1",
-    "jsdom": "^11.1.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0-beta.38",
+    "babel-core": "^7.0.0-bridge.0",
+    "coveralls": "^3.0.2",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "jsdom": "^13.1.0",
     "jsdom-global": "^3.0.2",
-    "json-loader": "^0.5.4",
-    "mocha": "^3.4.2",
-    "node-sass": "^4.5.2",
-    "npm-run-all": "^4.0.2",
-    "nyc": "^11.0.3",
-    "onchange": "^3.2.1",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.4.2",
-    "react-hot-loader": "^1.3.1",
-    "sinon": "^2.3.8",
-    "style-loader": "^0.17.0",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-notifier": "^1.5.0"
+    "json-loader": "^0.5.7",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^13.1.0",
+    "onchange": "^5.2.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "sinon": "^7.2.2",
+    "webpack": "^4.28.3",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-notifier": "^1.7.0"
   },
   "dependencies": {
-    "moment": "^2.17.1"
+    "moment": "^2.23.0"
   },
   "repository": {
     "type": "git",
@@ -56,8 +54,8 @@
     "build": "node-sass --output-style compressed -o example/css src/scss/datetime.scss",
     "watch:css": "onchange 'src/scss/*.scss' -- npm run build",
     "watch:js": "webpack-dev-server --inline --hot --progress --colors",
-    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register --require .vscode/registerBabel.js test/*Test.js",
+    "test": "./node_modules/mocha/bin/_mocha --require .vscode/registerBabel.js test/*Test.js",
     "postversion": "git push && git push --tags",
-    "coverage": "NODE_ENV=test node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/_mocha --compilers js:babel-register test/*Test.js"
+    "coverage": "NODE_ENV=test node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/_mocha --require .vscode/registerBabel.js test/*Test.js"
   }
 }
