--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0-beta.38",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-plugin-istanbul": "^5.1.0",
     "coveralls": "^3.0.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
