Update all dependencies

--- a/package.json
+++ b/package.json
@@ -6,33 +6,35 @@
   "author": "Carlos Coloma <ccescribano@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0-beta.38",
+    "@babel/register": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-plugin-istanbul": "^5.1.0",
-    "coveralls": "^3.0.2",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "jsdom": "^13.1.0",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-istanbul": "^5.1.1",
+    "coveralls": "^3.0.3",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jsdom": "^14.0.0",
     "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.7",
-    "mocha": "^5.2.0",
+    "mocha": "^6.0.2",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^13.1.0",
+    "nyc": "^13.3.0",
     "onchange": "^5.2.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "sinon": "^7.2.2",
-    "webpack": "^4.28.3",
-    "webpack-dev-server": "^3.1.14",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "sinon": "^7.2.7",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
     "webpack-notifier": "^1.7.0"
   },
   "dependencies": {
-    "moment": "^2.23.0"
+    "moment": "^2.24.0"
   },
   "repository": {
     "type": "git",
@@ -55,7 +57,7 @@
     "build": "node-sass --output-style compressed -o example/css src/scss/datetime.scss",
     "watch:css": "onchange 'src/scss/*.scss' -- npm run build",
     "watch:js": "webpack-dev-server --inline --hot --progress --colors",
-    "test": "./node_modules/mocha/bin/_mocha --require .vscode/registerBabel.js test/*Test.js",
+    "test": "./node_modules/.bin/_mocha --require .vscode/registerBabel.js test/*Test.js",
     "postversion": "git push && git push --tags",
     "coverage": "NODE_ENV=test node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/_mocha --require .vscode/registerBabel.js test/*Test.js"
   }
