Remove moment and move from mocha into jest

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,19 +2,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Mocha tests",
+      "name": "Jest tests",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-      "args": [
-        "--compilers",
-        "js:babel-register",
-        "--no-timeouts",
-        "--require",
-        ".vscode/registerBabel.js",
-        "test/DateTimeInputTest.js"
-      ],
-      "cwd": "${workspaceRoot}"
+      "program": "${workspaceRoot}/node_modules/.bin/jest",
+      "args": ["test/DateTimeInputTest.js"],
+      "cwd": "${workspaceRoot}",
+      "sourceMaps": true,
+      "outFiles": ["build/sourcemaps/*"]
     }
   ]
 }
