--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "babel-loader": "^8.0.6",
     "coveralls": "^3.0.9",
     "jest": "^24.9.0",
-    "jsdom": "^15.2.1",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-test-renderer": "^16.12.0",
@@ -54,6 +52,6 @@
     "watch": "npm-run-all --parallel watch:**",
     "test": "TZ=UTC jest",
     "postversion": "git push && git push --tags",
-    "coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text jest"
+    "coverage": "TZ=UTC jest --coverage && cat ./coverage/lcov.info | coveralls"
   }
 }
